[package]
name = "pulseeffects"
version = "6.0.0"
authors = ["Wellington Wallace <wellingtonwallace@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
gettext-rs= { version = "0.4.4", features = ["gettext-system"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
gtk = { git = "https://github.com/gtk-rs/gtk4.git", package = "gtk4" }
